--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
 
 <section class="why">
 <div class="why-wrap">
-  <h1>21st century students are engaged through&nbsp;technology.</h1>
+  <h1>21st century students are engaged through technology.</h1>
   <p>Meeting their needs means speaking their&nbsp;language.</p>
 </div>
 </section>
