--- a/sass/knet/_banner.scss
+++ b/sass/knet/_banner.scss
@@ -4,6 +4,8 @@
 $feature-shadow-color: color($base, .25);
 $feature-shadow-size: 6px;
 
+$banner-break: 32em;
+
 [role="banner"] {
   @extend %container;
   @include stretch-x;
@@ -12,27 +14,38 @@ $feature-shadow-size: 6px;
 }
 
 .brand {
-  @include span(50%);
-  @include adjust-font-size-to($medpx);
   font-weight: bold;
 
   a {
     #{$link} {
       @include rhythm-padding(1, .5);
+      @include gutters;
       @include transition(all 300ms);
       @include background(image-url('logo.svg') no-repeat scroll left);
       @include background-size(rhythm(5) auto);
-      display: inline-block;
-      padding-left: rhythm(4.75);
+      display: block;
+      text-align: center;
     }
-    #{$focus} {
-      @include background-size(rhythm(6.5) auto);
+  }
+
+  @include breakpoint($banner-break) {
+    @include span(60%);
+    @include adjust-font-size-to($medpx);
+    a {
+      #{$link} {
+        display: inline-block;
+        padding-left: rhythm(4.75);
+        text-align: left;
+      }
+      #{$focus} {
+        @include background-size(rhythm(6.5) auto);
+      }
     }
   }
 }
 
 .page-nav {
-  @include span(last 50%);
+  @include span(last 40%);
   @include padding-leader(1);
   @include adjust-font-size-to($smallpx);
   text-align: right;
@@ -42,4 +55,7 @@ $feature-shadow-size: 6px;
     padding: rhythm(.25) rhythm(.5);
     + a { border-left: 2px solid color(darker $blue, .25); }
   }
+
+  display: none;
+  @include breakpoint($banner-break) { display: inline; }
 }
