--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
       <span class="icon-consult"></span>
       <h2 class="feature-title">Training & Technology</h2>
       <p>
-        Helping you engage students,
+        Engage students,
         personalize learning,
         and reduce classroom&nbsp;burdens.
       </p>
